@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [API_PARSER] [CNAPP_WIZ] New collector
 - [SCRIPTS] [REFRESH_NIC] Support CARP configuration import from rc.conf
+### Changed
+- [GUI] [NETIF] Show CARP information for addresses imported from rc.conf (support for externally managed CARP)
 ### Fixed
 - [SCRIPTS] [REFRESH_NIC] Correctly parse complex rc.conf ifconfig entries
 
